--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,8 +27,15 @@
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&family=Staatliches&display=swap"
       rel="stylesheet">
+    <style>
+      ::-webkit-scrollbar {
+        width: 0px;
+        background: transparent;
+      }
+    </style>
     <title>GameDart</title>
   </head>
   <body>
