--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <meta property="og:image" content="https://i.imgur.com/edJhC1K.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
