Edit meta tag for image

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
       content="Web site created using create-react-app"
     />
 
-    <meta property="og:image" content="https://i.imgur.com/edJhC1K.png" />
+    <meta property="og:image" name="image" content="https://i.imgur.com/edJhC1K.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
